# circular-buffer

./: .gitignore  Makefile  README.md  cbuff.c  cbuff.h  example.c
src/: CMakeLists.txt  cbuff.c  cbuff.h  example.c  test.c
