cmake_minimum_required(VERSION 3.0.0)
project(circular_buffer)
file(GLOB_RECURSE SRC_FILES ${PROJECT_SOURCE_DIR}/*.c)
add_executable(${PROJECT_NAME} ${SRC_FILES})
set_property(TARGET ${PROJECT_NAME} PROPERTY C_STANDARD 99)
set(GCC_COVERAGE_COMPILE_FLAGS "-Werror -Wall -Wextra -Wpointer-arith -Wcast-align -Wwrite-strings -Wswitch-default -Wunreachable-code -Winit-self -Wmissing-field-initializers -Wno-unknown-pragmas -Wstrict-prototypes -Wundef -Wold-style-definition -Wno-misleading-indentation")
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} ${GCC_COVERAGE_COMPILE_FLAGS})